# Vault

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py  vault.1
.github/workflows/: cmake-multi-platform.yml
completions/: _vault  vault
include/: Application.h  ArgumentsParser.h  Base64.h  CompressionManager.h  Directory.h  EncryptionManager.h  File.h  Node.h  Utils.h  Vault.h  VaultManager.h  XMLNode.h  XMLParser.h
src/: Application.cpp  ArgumentsParser.cpp  Base64.cpp  CompressionManager.cpp  Directory.cpp  EncryptionManager.cpp  File.cpp  Main.cpp  Node.cpp  Utils.cpp  Vault.cpp  VaultManager.cpp  XMLNode.cpp  XMLParser.cpp
tests/: CMakeLists.txt
tests/src/: ApplicationTest.cpp  ArgumentsParserTest.cpp  Base64Test.cpp  CompressionManagerTest.cpp  EncryptionManagerTest.cpp  VaultTest.cpp  XMLParserTest.cpp
